force-app/main/default/objects/ServiceAppointment/fields/FSM_ImpactCodeGroup__c.field-meta.xml
<CustomField>
    <fullName>FSM_ImpactCodeGroup__c</fullName>
    <description>Created as part of SFS-5827</description>
    <label>Impact Code Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASST</fullName>
                <label>Asset</label>
            </value>
            <value>
                <fullName>BCC-AWAR</fullName>
                <label>Bilat: Customer Aware of Service Request</label>
            </value>
            <value>
                <fullName>BCC-CONS</fullName>
                <label>Bilat: Consent to Contact Customer</label>
            </value>
            <value>
                <fullName>BCC-CREQ</fullName>
                <label>Bilat: Customer Contact Required</label>
            </value>
            <value>
                <fullName>BCC-PRFM</fullName>
                <label>Bilat: Customer Prefrd Method of Contact</label>
            </value>
            <value>
                <fullName>BCC-PRFT</fullName>
                <label>Bilat: Customer Preferred Contact Time</label>
            </value>
            <value>
                <fullName>COST</fullName>
            </value>
            <value>
                <fullName>CUST</fullName>
                <label>Customer</label>
            </value>
            <value>
                <fullName>DEVSERVS</fullName>
                <label>Dev Services Waste</label>
            </value>
            <value>
                <fullName>DEVSERVW</fullName>
                <label>Dev Services Water</label>
            </value>
            <value>
                <fullName>ENVI</fullName>
                <label>Environmental</label>
            </value>
            <value>
                <fullName>HESA</fullName>
                <label>Health &amp; Safety</label>
            </value>
            <value>
                <fullName>MECTCN</fullName>
                <label>NHH - Do Not Notify Ext System of Visit</label>
            </value>
            <value>
                <fullName>MECTCY</fullName>
                <label>NHH - Notify External System of Visit</label>
            </value>
            <value>
                <fullName>MEFRAP</fullName>
                <label>Fropt Appointment Type</label>
            </value>
            <value>
                <fullName>MEPRBO</fullName>
                <label>Billing Back Office</label>
            </value>
            <value>
                <fullName>MEPRFW</fullName>
                <label>Field Worker</label>
            </value>
            <value>
                <fullName>MEPRIC</fullName>
                <label>Installation Contractor</label>
            </value>
            <value>
                <fullName>MEPRMR</fullName>
                <label>Meter Reader</label>
            </value>
            <value>
                <fullName>MEPRMT</fullName>
                <label>Metering Technician</label>
            </value>
            <value>
                <fullName>MEPROP</fullName>
                <label>Operations</label>
            </value>
            <value>
                <fullName>NIBICTCN</fullName>
                <label>NHH Discon.don&apos;t notify ext sys.of visit</label>
            </value>
            <value>
                <fullName>NIBICTCY</fullName>
                <label>NHH Discon. notify ext system.of visit</label>
            </value>
            <value>
                <fullName>PROC</fullName>
                <label>Process</label>
            </value>
            <value>
                <fullName>QUAL</fullName>
                <label>Quality</label>
            </value>
            <value>
                <fullName>SECNSI</fullName>
                <label>Customer Networks Sewage - Impact</label>
            </value>
            <value>
                <fullName>STATI</fullName>
                <label>Statutory - Impact</label>
            </value>
            <value>
                <fullName>WDAMWS</fullName>
                <label>Distrib&apos;n Asset Mgt Water Supply</label>
            </value>
            <value>
                <fullName>WDAQQU</fullName>
                <label>Aqua Pea Quantification</label>
            </value>
            <value>
                <fullName>WDIPII</fullName>
                <label>Infra - Proactive Inspection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>