force-app/main/default/objects/ServiceAppointment/fields/FSM_ImpactPIACode__c.field-meta.xml
<CustomField>
    <fullName>FSM_ImpactPIACode__c</fullName>
    <formula>IF(AND(!ISBLANK(TEXT(FSM_ImpactCodeGroup__c)), !ISBLANK(TEXT( FSM_Impact_Code_API__c ))),


TEXT(FSM_ImpactCodeGroup__c) + &apos;-&apos; + TEXT( FSM_Impact_Code_API__c ),null)</formula>
    <label>PIA Code (Impact)</label>
    <type>Text</type>
</CustomField>