force-app/main/default/objects/ServiceAppointment/fields/FSM_InspectedManholeCovers__c.field-meta.xml
<CustomField>
    <fullName>FSM_InspectedManholeCovers__c</fullName>
    <description>Created as part SFS-5347</description>
    <label>We inspected the manhole covers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On your property</fullName>
            </value>
            <value>
                <fullName>In the road</fullName>
            </value>
            <value>
                <fullName>In the public footway/verge/open space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>