force-app/main/default/objects/ServiceAppointment/fields/FSM_InternalDueDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_InternalDueDate__c</fullName>
    <description>Internal Due Date</description>
    <formula>IF(ISPICKVAL(Status , &apos;New&apos;) ,DATEVALUE(DueDate) ,IF( DATEVALUE(DueDate) &lt;  TODAY() , TODAY()  + 7, DATEVALUE(DueDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Due Date</label>
    <type>Date</type>
</CustomField>