force-app/main/default/objects/ServiceAppointment/fields/FSM_InternalSLA__c.field-meta.xml
<CustomField>
    <fullName>FSM_InternalSLA__c</fullName>
    <description>SFS-3043</description>
    <formula>(DATEVALUE(DueDate)- DATEVALUE(EarliestStartTime))</formula>
    <label>Internal SLA (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>