force-app/main/default/objects/ServiceAppointment/fields/FSM_InvestigationEndTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_InvestigationEndTime__c</fullName>
    <formula>FSM_EnrouteEndTime__c</formula>
    <label>Investigation End Time</label>
    <type>DateTime</type>
</CustomField>