force-app/main/default/objects/ServiceAppointment/fields/FSM_InvestigationStartTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_InvestigationStartTime__c</fullName>
    <formula>FSM_EnrouteStartTime__c</formula>
    <label>Investigation Start Time</label>
    <type>DateTime</type>
</CustomField>