force-app/main/default/objects/ServiceAppointment/fields/FSM_Is_SelectAndSchedule_User__c.field-meta.xml
<CustomField>
    <fullName>FSM_Is_SelectAndSchedule_User__c</fullName>
    <description>SFS-7385</description>
    <formula>$Permission.FSM_Select_Schedule_User</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Select And Schedule User?</label>
    <type>Checkbox</type>
</CustomField>