force-app/main/default/objects/ServiceAppointment/fields/FSM_Is_Workmate_User__c.field-meta.xml
<CustomField>
    <fullName>FSM_Is_Workmate_User__c</fullName>
    <formula>$Permission.FSM_Workmate_User</formula>
    <label>Is Workmate User?</label>
    <type>Checkbox</type>
</CustomField>