force-app/main/default/objects/ServiceAppointment/fields/FSM_IsBundle__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsBundle__c</fullName>
    <description>Created as a part of SFS-230</description>
    <formula>IsBundle</formula>
    <label>FSM Bundle</label>
    <type>Checkbox</type>
</CustomField>