force-app/main/default/objects/ServiceAppointment/fields/FSM_IsTemporaryRecord__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsTemporaryRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-1783, Background field, this records are created for appointment booking slots, and will de deleted automatically</description>
    <label>Is Temporary Record?</label>
    <type>Checkbox</type>
</CustomField>