force-app/main/default/objects/ServiceAppointment/fields/FSM_IsVirtualUser__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsVirtualUser__c</fullName>
    <description>Created as a part of SFS-7303</description>
    <formula>$Permission.FSM_Virtual_User</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Virtual User?</label>
    <type>Checkbox</type>
</CustomField>