force-app/main/default/objects/ServiceAppointment/fields/FSM_JobFeedbackMtrReading__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobFeedbackMtrReading__c</fullName>
    <description>Created as part of SFS-5346</description>
    <label>Meter Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>