force-app/main/default/objects/ServiceAppointment/fields/FSM_JobSLA__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobSLA__c</fullName>
    <description>Created as a part of SFS-4427</description>
    <formula>FSSK__FSK_Work_Order__r.FSM_JobSLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>