force-app/main/default/objects/ServiceAppointment/fields/FSM_JobSLAUintOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobSLAUintOfMeasure__c</fullName>
    <description>SFS-4427</description>
    <formula>FSSK__FSK_Work_Order__r.FSM_JobSLAUnitOfMeasure__c</formula>
    <label>SLA Unit Of Measure</label>
    <type>Text</type>
</CustomField>