force-app/main/default/objects/ServiceAppointment/fields/FSM_JobSummary__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobSummary__c</fullName>
    <label>Job Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>