force-app/main/default/objects/ServiceAppointment/fields/FSM_Language__c.field-meta.xml
<CustomField>
    <fullName>FSM_Language__c</fullName>
    <description>created as part of SFS-5349</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>English &amp; Welsh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>