force-app/main/default/objects/ServiceAppointment/fields/FSM_LatestProductiveTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_LatestProductiveTime__c</fullName>
    <description>Created as a part of SFS-3049</description>
    <formula>(FSM_ProductiveEndTime__c - FSM_ProductiveStartTime__c)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Productive Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>