force-app/main/default/objects/ServiceAppointment/fields/FSM_LeakResponsibilityDeclaration__c.field-meta.xml
<CustomField>
    <fullName>FSM_LeakResponsibilityDeclaration__c</fullName>
    <description>created as part of sfs-5350</description>
    <label>Leak Responsibility Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept that, following the work, black tarmacadam patches may be evident on the property that a repair has been completed.</fullName>
            </value>
            <value>
                <fullName>I wish to decline the black tarmacadam final reinstatement and will carry out my own reinstatement privately.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>