force-app/main/default/objects/ServiceAppointment/fields/FSM_LeakShowing__c.field-meta.xml
<CustomField>
    <fullName>FSM_LeakShowing__c</fullName>
    <description>Created as part of sfs-5350</description>
    <label>Leak Showing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>