force-app/main/default/objects/ServiceAppointment/fields/FSM_ListOfTemplates__c.field-meta.xml
<CustomField>
    <fullName>FSM_ListOfTemplates__c</fullName>
    <label>Email Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Sewer Blockages</fullName>
            </value>
            <value>
                <fullName>Leak on Private Supply Pipe</fullName>
            </value>
            <value>
                <fullName>BOPPs 3rd Party</fullName>
            </value>
            <value>
                <fullName>Emergency Land Entry Notice</fullName>
            </value>
            <value>
                <fullName>7 Day Land Entry Notice</fullName>
            </value>
            <value>
                <fullName>Gas Leak Detection</fullName>
            </value>
            <value>
                <fullName>Aquapea</fullName>
            </value>
            <value>
                <fullName>Permission to Dig (Welsh version)</fullName>
            </value>
            <value>
                <fullName>HD - Leak on Private Supply Pipe (Welsh version)</fullName>
            </value>
            <value>
                <fullName>HD - Leak on Private Supply Pipe (English version)</fullName>
            </value>
            <value>
                <fullName>HD - 7 Day Land Entry Notice</fullName>
            </value>
            <value>
                <fullName>HD - Emergency Notice Land Entry Notice</fullName>
            </value>
            <value>
                <fullName>HD - BOPPs 3rd Party</fullName>
            </value>
            <value>
                <fullName>All works complete</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Further investigation - I need to reattend to continue my investigations</fullName>
            </value>
            <value>
                <fullName>Non STW issue</fullName>
            </value>
            <value>
                <fullName>Private leak investigation – Further CI work required</fullName>
            </value>
            <value>
                <fullName>Private leak investigation – Further R&amp;M work required</fullName>
            </value>
            <value>
                <fullName>Private pressure - diagnosed, no further work</fullName>
            </value>
            <value>
                <fullName>Private pressure investigation – further R&amp;M work required</fullName>
            </value>
            <value>
                <fullName>I have taken samples to test, it will take 10 working days for the results, and we will contact you when we have them</fullName>
            </value>
            <value>
                <fullName>Further investigation – Someone from my team needs to reattend for further investigation</fullName>
            </value>
            <value>
                <fullName>Further work R&amp;M - I have arranged for a team to reattend and complete more work</fullName>
            </value>
            <value>
                <fullName>Waste issue</fullName>
            </value>
            <value>
                <fullName>We have completed and reinstated one excavation, but will need to come back out and dig again to complete our investigations</fullName>
            </value>
            <value>
                <fullName>Our work is not finished, we have carried out some investigation to find out what we need to do next.</fullName>
            </value>
            <value>
                <fullName>We have completed the work – No clean up</fullName>
            </value>
            <value>
                <fullName>We have completed the work – someone will be back out to do further investigation, Clean Up has been requested</fullName>
            </value>
            <value>
                <fullName>We have completed the work – someone will be back out to do further investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>