force-app/main/default/objects/ServiceAppointment/fields/FSM_Location__c.field-meta.xml
<CustomField>
    <fullName>FSM_Location__c</fullName>
    <description>Created as part of SFS-5350</description>
    <label>Location of Works</label>
    <length>255</length>
    <type>Text</type>
</CustomField>