force-app/main/default/objects/ServiceAppointment/fields/FSM_MailJetFieldsToBeBlanked__c.field-meta.xml
<CustomField>
    <fullName>FSM_MailJetFieldsToBeBlanked__c</fullName>
    <description>SFS-8264 and SFS-8263</description>
    <label>MailJet Fields To Be Blanked</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>