force-app/main/default/objects/ServiceAppointment/fields/FSM_MailjetFieldUpdateDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_MailjetFieldUpdateDateAndTime__c</fullName>
    <description>SFS-8263 and SFS-8264</description>
    <label>Mailjet Field Update Date And Time</label>
    <type>DateTime</type>
</CustomField>