force-app/main/default/objects/ServiceAppointment/fields/FSM_ManholeAdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>FSM_ManholeAdditionalInfo__c</fullName>
    <description>created as part of SFS-5347</description>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>