force-app/main/default/objects/ServiceAppointment/fields/FSM_ManholeDuringVisitWeDid__c.field-meta.xml
<CustomField>
    <fullName>FSM_ManholeDuringVisitWeDid__c</fullName>
    <description>created as part of SFS-5347</description>
    <label>During the visit we</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Made the area safe; cones and barriers may be visible around the affected area</fullName>
            </value>
            <value>
                <fullName>Found no problem with the manhole</fullName>
            </value>
            <value>
                <fullName>Completed a survey to identify if further work is required</fullName>
            </value>
            <value>
                <fullName>Were unable to gain access to carry out the inspection, please call 0333 996 9800 to arrange a visit to re-attend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>