force-app/main/default/objects/ServiceAppointment/fields/FSM_ManholeResponsibleCompanyOther__c.field-meta.xml
<CustomField>
    <fullName>FSM_ManholeResponsibleCompanyOther__c</fullName>
    <description>created as part of SFS-5347</description>
    <label>Manhole Responsible Company(Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>