force-app/main/default/objects/ServiceAppointment/fields/FSM_MeteringCustomerAppointment__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeteringCustomerAppointment__c</fullName>
    <description>Metering Customer Appointment . Created as a part of SFS-1793</description>
    <formula>IF(AND(FSM_BusinessUnit__c=&apos;Metering&apos; ,  FSM_CustomerAppointment__c = true),   true, false)</formula>
    <label>Metering Customer Appointment</label>
    <type>Checkbox</type>
</CustomField>