force-app/main/default/objects/ServiceAppointment/fields/FSM_MinimumCrewSize__c.field-meta.xml
<CustomField>
    <fullName>FSM_MinimumCrewSize__c</fullName>
    <description>SFS-5361</description>
    <formula>FSSK__FSK_Work_Order__r.MinimumCrewSize</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Crew Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>