force-app/main/default/objects/ServiceAppointment/fields/FSM_NeighborLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_NeighborLocation__c</fullName>
    <description>created as part of SFS-5355</description>
    <label>Neighbour Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>