force-app/main/default/objects/ServiceAppointment/fields/FSM_NetTechDuringVisitWeDid__c.field-meta.xml
<CustomField>
    <fullName>FSM_NetTechDuringVisitWeDid__c</fullName>
    <description>Created as part of SFS-5347</description>
    <label>During the visit we</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carried out a camera survey of the drain</fullName>
            </value>
            <value>
                <fullName>Checked the Non Return Valve (NRV)</fullName>
            </value>
            <value>
                <fullName>Flushed through the pipes</fullName>
            </value>
            <value>
                <fullName>Checked the drains and found there are no problems with them</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>