force-app/main/default/objects/ServiceAppointment/fields/FSM_NetTechDuringVisitWeFound__c.field-meta.xml
<CustomField>
    <fullName>FSM_NetTechDuringVisitWeFound__c</fullName>
    <description>Created as part of SFS-5347</description>
    <label>During our visit we found</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No problems - the drains are flowing as they should</fullName>
            </value>
            <value>
                <fullName>We couldn&apos;t get access to the property/land located at:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>