force-app/main/default/objects/ServiceAppointment/fields/FSM_NetTechNoLocationAccessReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_NetTechNoLocationAccessReason__c</fullName>
    <description>created as part of SFS-5347</description>
    <label>No Access to Location Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>