force-app/main/default/objects/ServiceAppointment/fields/FSM_NetTechWhatHappensNext__c.field-meta.xml
<CustomField>
    <fullName>FSM_NetTechWhatHappensNext__c</fullName>
    <label>What happens next?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nothing, our work is complete, the drain is flowing as we&apos;d expect and service is restored</fullName>
            </value>
            <value>
                <fullName>We found an issue with the drain that we can’t fix today, one of our team members will be in touch</fullName>
            </value>
            <value>
                <fullName>We need to gain access to your property for further work to take place, we will call you to arrange this</fullName>
            </value>
            <value>
                <fullName>We need to get in touch with the occupier at the neighbouring property for access to:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>