force-app/main/default/objects/ServiceAppointment/fields/FSM_NoLiabilityForPrivateWorksAccepted__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoLiabilityForPrivateWorksAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created as part of SFS-5350</description>
    <label>Accept Severn Trent have no liabilty</label>
    <type>Checkbox</type>
</CustomField>