force-app/main/default/objects/ServiceAppointment/fields/FSM_NonProductiveCategory__c.field-meta.xml
<CustomField>
    <fullName>FSM_NonProductiveCategory__c</fullName>
    <description>Captures Non productive category as entered by field user. SFI-37
Updated as a part of SFS-4802</description>
    <label>Non Productive Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health &amp; Safety</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Tools/Plant/Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>