force-app/main/default/objects/ServiceAppointment/fields/FSM_NonProductiveEndTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_NonProductiveEndTime__c</fullName>
    <description>Captures non productive end time as confirmed by field user. SFI-37</description>
    <label>Non Productive End Time</label>
    <type>DateTime</type>
</CustomField>